# comice-about

./: .gitignore  README.md  THANKS  meson.build  post_install.py
data/: application.css  com.github.libredeb.comice-about.appdata.xml  com.github.libredeb.comice-about.desktop  comicemem.sh
debian/: changelog  control  copyright
src/: ComiceAbout.vala  Resources.vala
src/functions/: GetDeviceModel.vala  GetGraphics.vala  GetInch.vala  GetMemory.vala  GetOSVersion.vala  GetProcessor.vala  GetSerialNumber.vala  GetStartupDisk.vala  GetStorageInfo.vala  MemoryRAM.vala  StorageUsage.vala
src/widgets/: DisplaysBox.vala  MemoryBox.vala  OverviewBox.vala  StorageBox.vala  SupportBox.vala
vapi/: config.vapi
